# esp_application

components/common_event/: CMakeLists.txt  common_event.c  common_event.h
components/custom_console/: CMakeLists.txt  custom_console.c  custom_console.h
components/custom_log/: CMakeLists.txt  custom_log.c  custom_log.h
components/esp_hw_timer/: CMakeLists.txt  esp_hw_timer.c  esp_hw_timer.h
components/esp_modem/: CMakeLists.txt  Kconfig
components/esp_modem/include/: bg95.h  esp_modem.h  (+2 more)
demo/hello_world/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
demo/hello_world/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  task_def.h
demo/hello_world/main/console_cmd/: app_console_cmd.c  app_console_cmd.h
demo/hello_world/main/event_center/: app_events.c  app_events.h
demo/hello_world/main/fat/: fat.c  fat.h
demo/hello_world/main/network/: modem_board.c  modem_board.h  network.c  network.h
demo/hello_world/main/ota_main/common/inc/: pub_datatype.h  pub_enum.h  sscanf.h  vsnprintf.h
demo/hello_world/main/ota_main/common/src/: sscanf.c  vsnprintf.c
demo/hello_world/main/ota_main/ota/inc/: ota_constant.h  ota_main.h  ota_msg.h  ota_timer_handler.h
demo/hello_world/main/ota_main/ota/src/: ota_main.c  ota_main_thread.c  ota_msg.c  ota_timer_handler.c
demo/hello_world/main/ota_main/port/inc/: ota_fs.h  ota_log.h  ota_mem.h  ota_modem.h  ota_system.h  ota_timer.h
demo/hello_world/main/ota_main/port/src/: ota_fs.c  ota_log.c  ota_mem.c  ota_modem.c  ota_system.c  ota_timer.c
demo/hello_world/main/peripherals/: board.c  board.h
(+6 files in other folders)
